[gd_scene load_steps=6 format=3 uid="uid://h2jnhi46pges"]

[ext_resource type="Script" uid="uid://c5dlyklgm8ba7" path="res://player.gd" id="1_4flbx"]

[sub_resource type="Gradient" id="Gradient_onrkg"]
offsets = PackedFloat32Array(0, 0.58666664, 0.76)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i3pqv"]
gradient = SubResource("Gradient_onrkg")
fill = 1
fill_from = Vector2(0.49115044, 0.49557522)

[sub_resource type="CircleShape2D" id="CircleShape2D_hqtel"]
radius = 32.24903

[sub_resource type="CircleShape2D" id="CircleShape2D_4flbx"]
radius = 42.107006

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_4flbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_i3pqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hqtel")

[node name="DashHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHitbox"]
shape = SubResource("CircleShape2D_4flbx")

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.6
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 2000.0
scale_amount_min = 2.0
scale_amount_max = 4.0

[connection signal="detect_interactable" from="." to="." method="_on_recieve_detect_signal"]
[connection signal="body_entered" from="DashHitbox" to="." method="_on_dash_hitbox_body_entered"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
